--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
     "expo-location": "~16.1.0",
+    "expo-sensors": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
+    "haversine": "^1.1.1",
     "react": "18.2.0",
     "react-icons": "^4.11.0",
     "react-native": "0.72.6",
