--- a/app.json
+++ b/app.json
@@ -15,7 +15,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "This app uses your location to provide navigation services.",
+        "NSLocationAlwaysUsageDescription": "This app requires access to your location even when closed to provide continuous navigation updates."
+      }
     },
     "android": {
       "adaptiveIcon": {
